; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/crypto/amcc/extr_crypto4xx_core.c_crypto4xx_alg_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/crypto/amcc/extr_crypto4xx_core.c_crypto4xx_alg_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { %struct.TYPE_2__, %struct.crypto_alg* }
%struct.TYPE_2__ = type { i32 }
%struct.crypto_alg = type { i32 }
%struct.crypto4xx_alg = type { i32 }
%struct.crypto4xx_ctx = type { i64, i64, i64, i32*, i32*, i32 }

@CRYPTO_ALG_TYPE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_tfm*)* @crypto4xx_alg_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @crypto4xx_alg_init(%struct.crypto_tfm* %0) #0 {
  %2 = alloca %struct.crypto_tfm*, align 8
  %3 = alloca %struct.crypto_alg*, align 8
  %4 = alloca %struct.crypto4xx_alg*, align 8
  %5 = alloca %struct.crypto4xx_ctx*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %2, align 8
  %6 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %7 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %6, i32 0, i32 1
  %8 = load %struct.crypto_alg*, %struct.crypto_alg** %7, align 8
  store %struct.crypto_alg* %8, %struct.crypto_alg** %3, align 8
  %9 = load %struct.crypto_alg*, %struct.crypto_alg** %3, align 8
  %10 = call %struct.crypto4xx_alg* @crypto_alg_to_crypto4xx_alg(%struct.crypto_alg* %9)
  store %struct.crypto4xx_alg* %10, %struct.crypto4xx_alg** %4, align 8
  %11 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %12 = call %struct.crypto4xx_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %11)
  store %struct.crypto4xx_ctx* %12, %struct.crypto4xx_ctx** %5, align 8
  %13 = load %struct.crypto4xx_alg*, %struct.crypto4xx_alg** %4, align 8
  %14 = getelementptr inbounds %struct.crypto4xx_alg, %struct.crypto4xx_alg* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.crypto4xx_ctx*, %struct.crypto4xx_ctx** %5, align 8
  %17 = getelementptr inbounds %struct.crypto4xx_ctx, %struct.crypto4xx_ctx* %16, i32 0, i32 5
  store i32 %15, i32* %17, align 8
  %18 = load %struct.crypto4xx_ctx*, %struct.crypto4xx_ctx** %5, align 8
  %19 = getelementptr inbounds %struct.crypto4xx_ctx, %struct.crypto4xx_ctx* %18, i32 0, i32 4
  store i32* null, i32** %19, align 8
  %20 = load %struct.crypto4xx_ctx*, %struct.crypto4xx_ctx** %5, align 8
  %21 = getelementptr inbounds %struct.crypto4xx_ctx, %struct.crypto4xx_ctx* %20, i32 0, i32 3
  store i32* null, i32** %21, align 8
  %22 = load %struct.crypto4xx_ctx*, %struct.crypto4xx_ctx** %5, align 8
  %23 = getelementptr inbounds %struct.crypto4xx_ctx, %struct.crypto4xx_ctx* %22, i32 0, i32 2
  store i64 0, i64* %23, align 8
  %24 = load %struct.crypto4xx_ctx*, %struct.crypto4xx_ctx** %5, align 8
  %25 = getelementptr inbounds %struct.crypto4xx_ctx, %struct.crypto4xx_ctx* %24, i32 0, i32 1
  store i64 0, i64* %25, align 8
  %26 = load %struct.crypto4xx_ctx*, %struct.crypto4xx_ctx** %5, align 8
  %27 = getelementptr inbounds %struct.crypto4xx_ctx, %struct.crypto4xx_ctx* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  %28 = load %struct.crypto_alg*, %struct.crypto_alg** %3, align 8
  %29 = getelementptr inbounds %struct.crypto_alg, %struct.crypto_alg* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @CRYPTO_ALG_TYPE_MASK, align 4
  %32 = and i32 %30, %31
  switch i32 %32, label %33 [
    i32 128, label %37
  ]

33:                                               ; preds = %1
  %34 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %35 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  store i32 48, i32* %36, align 8
  br label %41

37:                                               ; preds = %1
  %38 = load %struct.crypto_tfm*, %struct.crypto_tfm** %2, align 8
  %39 = call i32 @__crypto_ahash_cast(%struct.crypto_tfm* %38)
  %40 = call i32 @crypto_ahash_set_reqsize(i32 %39, i32 48)
  br label %41

41:                                               ; preds = %37, %33
  ret i32 0
}

declare dso_local %struct.crypto4xx_alg* @crypto_alg_to_crypto4xx_alg(%struct.crypto_alg*) #1

declare dso_local %struct.crypto4xx_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @crypto_ahash_set_reqsize(i32, i32) #1

declare dso_local i32 @__crypto_ahash_cast(%struct.crypto_tfm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
